...
        singleLine = true,
        shape = CircleShape,
        modifier =
            modifier
                .padding(8.dp)
                .fillMaxWidth()
                .testTag("search_input"),
    )
}

@ExperimentalMaterial3Api
@Composable
fun SearchResultsList(
...
